// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generator Snapshots Chat Only (Local) should match package.json snapshot: package.json 1`] = `
"{
  "name": "chat-app",
  "main": "expo-router/entry",
  "version": "1.0.0",
  "scripts": {
    "start": "expo start",
    "android": "expo start --android",
    "ios": "expo start --ios",
    "web": "expo start --web",
    "lint": "expo lint",
    "typecheck": "tsc --noEmit",
    "build": "npm run build --workspaces --if-present",
    "test": "npm run test --workspaces --if-present"
  },
  "dependencies": {
    "@ai-sdk/anthropic": "^3.0.1",
    "@ai-sdk/google": "^3.0.1",
    "@ai-sdk/openai": "^3.0.1",
    "@blazejkustra/react-native-alert": "^1.0.0",
    "@expo/vector-icons": "^15.0.3",
    "@react-native-async-storage/async-storage": "^2.2.0",
    "@react-navigation/bottom-tabs": "^7.9.0",
    "@react-navigation/elements": "^2.9.3",
    "@react-navigation/native": "^7.1.26",
    "@spezivibe/chat": "*",
    "ai": "^6.0.3",
    "expo": "~54.0.30",
    "expo-constants": "~18.0.12",
    "expo-font": "~14.0.10",
    "expo-haptics": "~15.0.8",
    "expo-image": "~3.0.11",
    "expo-linking": "~8.0.11",
    "expo-router": "~6.0.21",
    "expo-splash-screen": "~31.0.13",
    "expo-status-bar": "~3.0.9",
    "expo-symbols": "~1.0.8",
    "expo-system-ui": "~6.0.9",
    "expo-web-browser": "~15.0.10",
    "formik": "^2.4.9",
    "react": "19.1.0",
    "react-dom": "19.1.0",
    "react-native": "0.81.5",
    "react-native-gesture-handler": "~2.28.0",
    "react-native-reanimated": "~4.1.6",
    "react-native-safe-area-context": "~5.6.0",
    "react-native-screens": "~4.16.0",
    "react-native-web": "~0.21.0",
    "react-native-worklets": "0.5.1",
    "yup": "^1.7.1"
  },
  "devDependencies": {
    "@types/react": "~19.1.17",
    "eslint": "^9.39.0",
    "eslint-config-expo": "~10.0.0",
    "typescript": "~5.9.2"
  },
  "private": true,
  "workspaces": [
    "packages/*"
  ]
}"
`;

exports[`Generator Snapshots Firebase + HIPAA should match file structure snapshot: files 1`] = `
[
  ".claude/commands/README.md",
  ".claude/commands/changelog.md",
  ".claude/commands/compliance.md",
  ".claude/commands/data-model.md",
  ".claude/commands/docs.md",
  ".claude/commands/feature.md",
  ".claude/commands/fhir-mapping.md",
  ".claude/commands/fhir.md",
  ".claude/commands/release.md",
  ".claude/commands/study-planner.md",
  ".claude/commands/test.md",
  ".claude/commands/ux-planner.md",
  ".env",
  ".env.example",
  ".firebaserc",
  ".gitignore",
  "AGENTS.md",
  "CLAUDE.md",
  "GETTING_STARTED.md",
  "HIPAA_CHECKLIST.md",
  "app.config.js",
  "app/(account)/_layout.tsx",
  "app/(account)/change-password.tsx",
  "app/(account)/edit-profile.tsx",
  "app/(onboarding)/_layout.tsx",
  "app/(onboarding)/consent.tsx",
  "app/(onboarding)/features.tsx",
  "app/(onboarding)/forgot-password.tsx",
  "app/(onboarding)/get-started.tsx",
  "app/(onboarding)/register.tsx",
  "app/(onboarding)/sign-in.tsx",
  "app/(onboarding)/welcome.tsx",
  "app/(tabs)/_layout.tsx",
  "app/(tabs)/contacts.tsx",
  "app/(tabs)/explore.tsx",
  "app/(tabs)/index.tsx",
  "app/_layout.tsx",
  "app/modal.tsx",
  "assets/images/android-icon-background.png",
  "assets/images/android-icon-foreground.png",
  "assets/images/android-icon-monochrome.png",
  "assets/images/favicon.png",
  "assets/images/icon.png",
  "assets/images/partial-react-logo.png",
  "assets/images/react-logo.png",
  "assets/images/react-logo@2x.png",
  "assets/images/react-logo@3x.png",
  "assets/images/rocket-logo.png",
  "assets/images/spezivibe-logo.png",
  "assets/images/splash-icon.png",
  "assets/styles/global.css",
  "components/account/account-button.tsx",
  "components/account/account-sheet.tsx",
  "components/error-boundary.tsx",
  "components/external-link.tsx",
  "components/haptic-tab.tsx",
  "components/hello-wave.tsx",
  "components/parallax-scroll-view.tsx",
  "components/themed-text.tsx",
  "components/themed-view.tsx",
  "components/ui/collapsible.tsx",
  "components/ui/icon-symbol.ios.tsx",
  "components/ui/icon-symbol.tsx",
  "components/ui/loading-screen.tsx",
  "components/ui/screen.tsx",
  "constants/theme.ts",
  "eslint.config.js",
  "firebase.json",
  "firestore.indexes.json",
  "firestore.rules",
  "hooks/use-auto-skip-if-authenticated.ts",
  "hooks/use-color-scheme.ts",
  "hooks/use-color-scheme.web.ts",
  "hooks/use-onboarding-status.ts",
  "hooks/use-theme-color.ts",
  "lib/constants.ts",
  "lib/services/README.md",
  "lib/services/backend-factory.ts",
  "lib/services/backends/firebase.ts",
  "lib/services/backends/local-storage.ts",
  "lib/services/config.ts",
  "lib/services/index.ts",
  "lib/services/standard-context.tsx",
  "lib/services/types.ts",
  "lib/utils/logger.ts",
  "metro.config.js",
  "package.json",
  "packages/account/.gitignore",
  "packages/account/.npmignore",
  "packages/account/EXAMPLES.md",
  "packages/account/README.md",
  "packages/account/babel.config.js",
  "packages/account/jest.setup.js",
  "packages/account/package.json",
  "packages/account/src/__mocks__/fileMock.js",
  "packages/account/src/__tests__/AccountOverview.test.tsx",
  "packages/account/src/__tests__/AccountProvider.test.tsx",
  "packages/account/src/__tests__/PasswordResetForm.test.tsx",
  "packages/account/src/__tests__/RegisterForm.test.tsx",
  "packages/account/src/__tests__/SignInForm.test.tsx",
  "packages/account/src/__tests__/in-memory-account-service.test.ts",
  "packages/account/src/__tests__/test-utils.tsx",
  "packages/account/src/components/AccountOverview.tsx",
  "packages/account/src/components/ChangePasswordForm.tsx",
  "packages/account/src/components/EditProfileForm.tsx",
  "packages/account/src/components/PasswordResetForm.tsx",
  "packages/account/src/components/RegisterForm.tsx",
  "packages/account/src/components/SignInForm.tsx",
  "packages/account/src/components/index.ts",
  "packages/account/src/hooks/useAccount.ts",
  "packages/account/src/index.ts",
  "packages/account/src/providers/AccountProvider.tsx",
  "packages/account/src/services/in-memory-account-service.ts",
  "packages/account/src/types.ts",
  "packages/account/src/utils/errors.ts",
  "packages/account/src/utils/index.ts",
  "packages/account/src/utils/logger.ts",
  "packages/account/src/utils/person-name.ts",
  "packages/account/src/utils/validation.ts",
  "packages/account/tsconfig.json",
  "packages/audit/package.json",
  "packages/audit/src/audit-service.ts",
  "packages/audit/src/backends/firebase.ts",
  "packages/audit/src/backends/local.ts",
  "packages/audit/src/backends/medplum.ts",
  "packages/audit/src/backends/supabase.ts",
  "packages/audit/src/index.ts",
  "packages/audit/src/sanitize.ts",
  "packages/audit/src/secure-storage.ts",
  "packages/audit/src/session-monitor.tsx",
  "packages/audit/src/types.ts",
  "packages/audit/tsconfig.json",
  "packages/firebase/.firebaserc",
  "packages/firebase/.gitignore",
  "packages/firebase/README.md",
  "packages/firebase/babel.config.js",
  "packages/firebase/firebase.json",
  "packages/firebase/firestore.rules",
  "packages/firebase/jest.integration.config.js",
  "packages/firebase/jest.integration.setup.js",
  "packages/firebase/jest.setup.js",
  "packages/firebase/package.json",
  "packages/firebase/src/__mocks__/fileMock.js",
  "packages/firebase/src/__tests__/errors.test.ts",
  "packages/firebase/src/__tests__/firebase-account-service.test.ts",
  "packages/firebase/src/__tests__/integration/firebase-account-service.integration.test.ts",
  "packages/firebase/src/__tests__/setup.ts",
  "packages/firebase/src/index.ts",
  "packages/firebase/src/services/firebase-account-service.ts",
  "packages/firebase/src/utils/errors.ts",
  "packages/firebase/tsconfig.json",
  "packages/onboarding/README.md",
  "packages/onboarding/babel.config.js",
  "packages/onboarding/jest.setup.js",
  "packages/onboarding/package.json",
  "packages/onboarding/src/__tests__/ConsentService.test.ts",
  "packages/onboarding/src/__tests__/components.test.tsx",
  "packages/onboarding/src/__tests__/useOnboardingStatus.test.ts",
  "packages/onboarding/src/components/ConsentCheckbox.tsx",
  "packages/onboarding/src/components/FeatureCard.tsx",
  "packages/onboarding/src/components/NameInputSection.tsx",
  "packages/onboarding/src/components/OnboardingButton.tsx",
  "packages/onboarding/src/components/PaginationDots.tsx",
  "packages/onboarding/src/components/index.ts",
  "packages/onboarding/src/constants.ts",
  "packages/onboarding/src/hooks/index.ts",
  "packages/onboarding/src/hooks/useOnboardingStatus.ts",
  "packages/onboarding/src/index.ts",
  "packages/onboarding/src/services/ConsentService.ts",
  "packages/onboarding/src/services/index.ts",
  "packages/onboarding/src/types.ts",
  "packages/onboarding/tsconfig.json",
  "storage.rules",
  "tsconfig.json",
]
`;

exports[`Generator Snapshots Firebase + HIPAA should match package.json snapshot: package.json 1`] = `
"{
  "name": "hipaa-firebase-app",
  "main": "expo-router/entry",
  "version": "1.0.0",
  "scripts": {
    "start": "expo start",
    "android": "expo start --android",
    "ios": "expo start --ios",
    "web": "expo start --web",
    "lint": "expo lint",
    "typecheck": "tsc --noEmit",
    "build": "npm run build --workspaces --if-present",
    "test": "npm run test --workspaces --if-present",
    "emulators": "firebase emulators:start",
    "emulators:export": "firebase emulators:export ./firebase-data",
    "emulators:import": "firebase emulators:start --import=./firebase-data"
  },
  "dependencies": {
    "@blazejkustra/react-native-alert": "^1.0.0",
    "@expo/vector-icons": "^15.0.3",
    "@react-native-async-storage/async-storage": "^2.2.0",
    "@react-navigation/bottom-tabs": "^7.9.0",
    "@react-navigation/elements": "^2.9.3",
    "@react-navigation/native": "^7.1.26",
    "@spezivibe/account": "*",
    "@spezivibe/audit": "*",
    "@spezivibe/firebase": "*",
    "@spezivibe/onboarding": "*",
    "expo": "~54.0.30",
    "expo-constants": "~18.0.12",
    "expo-font": "~14.0.10",
    "expo-haptics": "~15.0.8",
    "expo-image": "~3.0.11",
    "expo-linking": "~8.0.11",
    "expo-router": "~6.0.21",
    "expo-splash-screen": "~31.0.13",
    "expo-status-bar": "~3.0.9",
    "expo-symbols": "~1.0.8",
    "expo-system-ui": "~6.0.9",
    "expo-web-browser": "~15.0.10",
    "firebase": "^12.7.0",
    "formik": "^2.4.9",
    "react": "19.1.0",
    "react-dom": "19.1.0",
    "react-native": "0.81.5",
    "react-native-gesture-handler": "~2.28.0",
    "react-native-reanimated": "~4.1.6",
    "react-native-safe-area-context": "~5.6.0",
    "react-native-screens": "~4.16.0",
    "react-native-web": "~0.21.0",
    "react-native-worklets": "0.5.1",
    "yup": "^1.7.1"
  },
  "devDependencies": {
    "@types/react": "~19.1.17",
    "eslint": "^9.39.0",
    "eslint-config-expo": "~10.0.0",
    "typescript": "~5.9.2"
  },
  "private": true,
  "workspaces": [
    "packages/*"
  ]
}"
`;

exports[`Generator Snapshots Firebase + Onboarding Combination should match app/_layout.tsx snapshot (combined): app/_layout.tsx 1`] = `
"import React, { useEffect, useRef } from 'react';
import { DarkTheme, DefaultTheme, ThemeProvider } from '@react-navigation/native';
import { Stack, useSegments, useRouter, SplashScreen } from 'expo-router';
import { StatusBar } from 'expo-status-bar';
import AsyncStorage from '@react-native-async-storage/async-storage';
import 'react-native-reanimated';
import '@/assets/styles/global.css';

import { useColorScheme } from '@/hooks/use-color-scheme';
import { useOnboardingStatus } from '@/hooks/use-onboarding-status';
import { ErrorBoundary } from '@/components/error-boundary';
import { StandardProvider, useStandard } from '@/lib/services/standard-context';
import { AccountProvider, useAccount, InMemoryAccountService } from '@spezivibe/account';
import { ACCOUNT_CONFIGURATION, ONBOARDING_COMPLETED_KEY } from '@/lib/constants';

// Keep splash screen visible while we check auth
SplashScreen.preventAutoHideAsync();

export const unstable_settings = {
  initialRouteName: '(onboarding)',
};

function useProtectedRoute() {
  const { signedIn, isLoading: authLoading } = useAccount();
  const onboardingComplete = useOnboardingStatus();
  const segments = useSegments();
  const router = useRouter();
  const hasNavigated = useRef(false);

  useEffect(() => {
    // Wait for auth and onboarding status
    if (authLoading || onboardingComplete === null) {
      return;
    }

    // Only navigate once per auth state change
    const inAuthFlow = segments[0] === '(onboarding)';

    if (signedIn && inAuthFlow && !hasNavigated.current) {
      hasNavigated.current = true;
      router.replace('/(tabs)');
    } else if (!signedIn && !inAuthFlow && !hasNavigated.current) {
      hasNavigated.current = true;
      const target = onboardingComplete ? '/(onboarding)/sign-in' : '/(onboarding)/welcome';
      router.replace(target);
    }

    SplashScreen.hideAsync();
  }, [signedIn, authLoading, onboardingComplete, segments, router]);

  // Reset navigation flag when auth state changes
  useEffect(() => {
    hasNavigated.current = false;
  }, [signedIn]);
}

function RootLayoutNav() {
  useProtectedRoute();

  return (
    <Stack screenOptions={{ headerShown: false }}>
      <Stack.Screen name="(onboarding)" />
      <Stack.Screen name="(tabs)" />
      <Stack.Screen name="(account)" />
      {/* __INJECT_STACK_SCREENS__ */}
      <Stack.Screen name="modal" options={{ presentation: 'modal', title: 'Modal', headerShown: true }} />
    </Stack>
  );
}

function AppProviders({ children }: { children: React.ReactNode }) {
  const { accountService, isLoading } = useStandard();

  if (isLoading) {
    return null; // Keep showing splash screen
  }

  return (
    <AccountProvider
      accountService={accountService}
      configuration={ACCOUNT_CONFIGURATION}
      onLogin={async () => {
        await AsyncStorage.setItem(ONBOARDING_COMPLETED_KEY, 'true');
      }}
    >
      {children}
    </AccountProvider>
  );
}

export default function RootLayout() {
  const colorScheme = useColorScheme();
  const accountService = React.useMemo(() => new InMemoryAccountService({ startUnauthenticated: true }), []);

  return (
    <ErrorBoundary>
      <ThemeProvider value={colorScheme === 'dark' ? DarkTheme : DefaultTheme}>
        <StandardProvider accountService={accountService}>
          <AppProviders>
            <RootLayoutNav />
            <StatusBar style="auto" />
          </AppProviders>
        </StandardProvider>
      </ThemeProvider>
    </ErrorBoundary>
  );
}"
`;

exports[`Generator Snapshots Firebase Only (No Extra Features) should match app/_layout.tsx snapshot: app/_layout.tsx 1`] = `
"import React, { useEffect, useRef } from 'react';
import { DarkTheme, DefaultTheme, ThemeProvider } from '@react-navigation/native';
import { Stack, useSegments, useRouter, SplashScreen } from 'expo-router';
import { StatusBar } from 'expo-status-bar';
import AsyncStorage from '@react-native-async-storage/async-storage';
import 'react-native-reanimated';
import '@/assets/styles/global.css';

import { useColorScheme } from '@/hooks/use-color-scheme';
import { useOnboardingStatus } from '@/hooks/use-onboarding-status';
import { ErrorBoundary } from '@/components/error-boundary';
import { StandardProvider, useStandard } from '@/lib/services/standard-context';
import { AccountProvider, useAccount, InMemoryAccountService } from '@spezivibe/account';
import { ACCOUNT_CONFIGURATION, ONBOARDING_COMPLETED_KEY } from '@/lib/constants';

// Keep splash screen visible while we check auth
SplashScreen.preventAutoHideAsync();

export const unstable_settings = {
  initialRouteName: '(onboarding)',
};

function useProtectedRoute() {
  const { signedIn, isLoading: authLoading } = useAccount();
  const onboardingComplete = useOnboardingStatus();
  const segments = useSegments();
  const router = useRouter();
  const hasNavigated = useRef(false);

  useEffect(() => {
    // Wait for auth and onboarding status
    if (authLoading || onboardingComplete === null) {
      return;
    }

    // Only navigate once per auth state change
    const inAuthFlow = segments[0] === '(onboarding)';

    if (signedIn && inAuthFlow && !hasNavigated.current) {
      hasNavigated.current = true;
      router.replace('/(tabs)');
    } else if (!signedIn && !inAuthFlow && !hasNavigated.current) {
      hasNavigated.current = true;
      const target = onboardingComplete ? '/(onboarding)/sign-in' : '/(onboarding)/welcome';
      router.replace(target);
    }

    SplashScreen.hideAsync();
  }, [signedIn, authLoading, onboardingComplete, segments, router]);

  // Reset navigation flag when auth state changes
  useEffect(() => {
    hasNavigated.current = false;
  }, [signedIn]);
}

function RootLayoutNav() {
  useProtectedRoute();

  return (
    <Stack screenOptions={{ headerShown: false }}>
      <Stack.Screen name="(onboarding)" />
      <Stack.Screen name="(tabs)" />
      <Stack.Screen name="(account)" />
      {/* __INJECT_STACK_SCREENS__ */}
      <Stack.Screen name="modal" options={{ presentation: 'modal', title: 'Modal', headerShown: true }} />
    </Stack>
  );
}

function AppProviders({ children }: { children: React.ReactNode }) {
  const { accountService, isLoading } = useStandard();

  if (isLoading) {
    return null; // Keep showing splash screen
  }

  return (
    <AccountProvider
      accountService={accountService}
      configuration={ACCOUNT_CONFIGURATION}
      onLogin={async () => {
        await AsyncStorage.setItem(ONBOARDING_COMPLETED_KEY, 'true');
      }}
    >
      {children}
    </AccountProvider>
  );
}

export default function RootLayout() {
  const colorScheme = useColorScheme();
  const accountService = React.useMemo(() => new InMemoryAccountService({ startUnauthenticated: true }), []);

  return (
    <ErrorBoundary>
      <ThemeProvider value={colorScheme === 'dark' ? DarkTheme : DefaultTheme}>
        <StandardProvider accountService={accountService}>
          <AppProviders>
            <RootLayoutNav />
            <StatusBar style="auto" />
          </AppProviders>
        </StandardProvider>
      </ThemeProvider>
    </ErrorBoundary>
  );
}"
`;

exports[`Generator Snapshots Full Configuration (Firebase + All Features) should match .env.example snapshot: .env.example 1`] = `
"# Backend Configuration
EXPO_PUBLIC_BACKEND_TYPE=firebase

# Cloud auth + storage with Firebase
EXPO_PUBLIC_FIREBASE_API_KEY=
EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=
EXPO_PUBLIC_FIREBASE_PROJECT_ID=
EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
EXPO_PUBLIC_FIREBASE_APP_ID=

# LLM API Keys
EXPO_PUBLIC_OPENAI_API_KEY=
EXPO_PUBLIC_ANTHROPIC_API_KEY=
EXPO_PUBLIC_GOOGLE_API_KEY="
`;

exports[`Generator Snapshots Full Configuration (Firebase + All Features) should match app/_layout.tsx snapshot: app/_layout.tsx 1`] = `
"import React, { useEffect, useRef } from 'react';
import { DarkTheme, DefaultTheme, ThemeProvider } from '@react-navigation/native';
import { Stack, useSegments, useRouter, SplashScreen } from 'expo-router';
import { StatusBar } from 'expo-status-bar';
import AsyncStorage from '@react-native-async-storage/async-storage';
import 'react-native-reanimated';
import '@/assets/styles/global.css';

import { useColorScheme } from '@/hooks/use-color-scheme';
import { useOnboardingStatus } from '@/hooks/use-onboarding-status';
import { ErrorBoundary } from '@/components/error-boundary';
import { StandardProvider, useStandard } from '@/lib/services/standard-context';
import { AccountProvider, useAccount, InMemoryAccountService } from '@spezivibe/account';
import { ACCOUNT_CONFIGURATION, ONBOARDING_COMPLETED_KEY } from '@/lib/constants';

// Keep splash screen visible while we check auth
SplashScreen.preventAutoHideAsync();

export const unstable_settings = {
  initialRouteName: '(onboarding)',
};

function useProtectedRoute() {
  const { signedIn, isLoading: authLoading } = useAccount();
  const onboardingComplete = useOnboardingStatus();
  const segments = useSegments();
  const router = useRouter();
  const hasNavigated = useRef(false);

  useEffect(() => {
    // Wait for auth and onboarding status
    if (authLoading || onboardingComplete === null) {
      return;
    }

    // Only navigate once per auth state change
    const inAuthFlow = segments[0] === '(onboarding)';

    if (signedIn && inAuthFlow && !hasNavigated.current) {
      hasNavigated.current = true;
      router.replace('/(tabs)');
    } else if (!signedIn && !inAuthFlow && !hasNavigated.current) {
      hasNavigated.current = true;
      const target = onboardingComplete ? '/(onboarding)/sign-in' : '/(onboarding)/welcome';
      router.replace(target);
    }

    SplashScreen.hideAsync();
  }, [signedIn, authLoading, onboardingComplete, segments, router]);

  // Reset navigation flag when auth state changes
  useEffect(() => {
    hasNavigated.current = false;
  }, [signedIn]);
}

function RootLayoutNav() {
  useProtectedRoute();

  return (
    <Stack screenOptions={{ headerShown: false }}>
      <Stack.Screen name="(onboarding)" />
      <Stack.Screen name="(tabs)" />
      <Stack.Screen name="(account)" />
      <Stack.Screen name="questionnaire" options={{ presentation: 'modal' }} />
      <Stack.Screen name="modal" options={{ presentation: 'modal', title: 'Modal', headerShown: true }} />
    </Stack>
  );
}

function AppProviders({ children }: { children: React.ReactNode }) {
  const { accountService, isLoading } = useStandard();

  if (isLoading) {
    return null; // Keep showing splash screen
  }

  return (
    <AccountProvider
      accountService={accountService}
      configuration={ACCOUNT_CONFIGURATION}
      onLogin={async () => {
        await AsyncStorage.setItem(ONBOARDING_COMPLETED_KEY, 'true');
      }}
    >
      {children}
    </AccountProvider>
  );
}

export default function RootLayout() {
  const colorScheme = useColorScheme();
  const accountService = React.useMemo(() => new InMemoryAccountService({ startUnauthenticated: true }), []);

  return (
    <ErrorBoundary>
      <ThemeProvider value={colorScheme === 'dark' ? DarkTheme : DefaultTheme}>
        <StandardProvider accountService={accountService}>
          <AppProviders>
            <RootLayoutNav />
            <StatusBar style="auto" />
          </AppProviders>
        </StandardProvider>
      </ThemeProvider>
    </ErrorBoundary>
  );
}"
`;

exports[`Generator Snapshots Full Configuration (Firebase + All Features) should match file structure snapshot: files 1`] = `
[
  ".claude/commands/README.md",
  ".claude/commands/changelog.md",
  ".claude/commands/compliance.md",
  ".claude/commands/data-model.md",
  ".claude/commands/docs.md",
  ".claude/commands/feature.md",
  ".claude/commands/fhir-mapping.md",
  ".claude/commands/fhir.md",
  ".claude/commands/release.md",
  ".claude/commands/study-planner.md",
  ".claude/commands/test.md",
  ".claude/commands/ux-planner.md",
  ".env",
  ".env.example",
  ".firebaserc",
  ".gitignore",
  "AGENTS.md",
  "CLAUDE.md",
  "GETTING_STARTED.md",
  "app.config.js",
  "app/(account)/_layout.tsx",
  "app/(account)/change-password.tsx",
  "app/(account)/edit-profile.tsx",
  "app/(onboarding)/_layout.tsx",
  "app/(onboarding)/consent.tsx",
  "app/(onboarding)/features.tsx",
  "app/(onboarding)/forgot-password.tsx",
  "app/(onboarding)/get-started.tsx",
  "app/(onboarding)/register.tsx",
  "app/(onboarding)/sign-in.tsx",
  "app/(onboarding)/welcome.tsx",
  "app/(tabs)/_layout.tsx",
  "app/(tabs)/chat.tsx",
  "app/(tabs)/contacts.tsx",
  "app/(tabs)/explore.tsx",
  "app/(tabs)/index.tsx",
  "app/(tabs)/schedule.tsx",
  "app/_layout.tsx",
  "app/modal.tsx",
  "app/questionnaire/[id].tsx",
  "app/questionnaire/_layout.tsx",
  "assets/images/android-icon-background.png",
  "assets/images/android-icon-foreground.png",
  "assets/images/android-icon-monochrome.png",
  "assets/images/favicon.png",
  "assets/images/icon.png",
  "assets/images/partial-react-logo.png",
  "assets/images/react-logo.png",
  "assets/images/react-logo@2x.png",
  "assets/images/react-logo@3x.png",
  "assets/images/rocket-logo.png",
  "assets/images/spezivibe-logo.png",
  "assets/images/splash-icon.png",
  "assets/styles/global.css",
  "components/account/account-button.tsx",
  "components/account/account-sheet.tsx",
  "components/error-boundary.tsx",
  "components/external-link.tsx",
  "components/haptic-tab.tsx",
  "components/hello-wave.tsx",
  "components/parallax-scroll-view.tsx",
  "components/themed-text.tsx",
  "components/themed-view.tsx",
  "components/ui/collapsible.tsx",
  "components/ui/icon-symbol.ios.tsx",
  "components/ui/icon-symbol.tsx",
  "components/ui/loading-screen.tsx",
  "components/ui/screen.tsx",
  "constants/theme.ts",
  "eslint.config.js",
  "firebase.json",
  "firestore.indexes.json",
  "firestore.rules",
  "hooks/use-auto-skip-if-authenticated.ts",
  "hooks/use-color-scheme.ts",
  "hooks/use-color-scheme.web.ts",
  "hooks/use-onboarding-status.ts",
  "hooks/use-theme-color.ts",
  "lib/constants.ts",
  "lib/questionnaires/index.ts",
  "lib/questionnaires/sample-questionnaires.ts",
  "lib/questionnaires/types.ts",
  "lib/services/README.md",
  "lib/services/backend-factory.ts",
  "lib/services/backends/firebase.ts",
  "lib/services/backends/local-storage.ts",
  "lib/services/config.ts",
  "lib/services/index.ts",
  "lib/services/standard-context.tsx",
  "lib/services/types.ts",
  "lib/utils/logger.ts",
  "metro.config.js",
  "package.json",
  "packages/account/.gitignore",
  "packages/account/.npmignore",
  "packages/account/EXAMPLES.md",
  "packages/account/README.md",
  "packages/account/babel.config.js",
  "packages/account/jest.setup.js",
  "packages/account/package.json",
  "packages/account/src/__mocks__/fileMock.js",
  "packages/account/src/__tests__/AccountOverview.test.tsx",
  "packages/account/src/__tests__/AccountProvider.test.tsx",
  "packages/account/src/__tests__/PasswordResetForm.test.tsx",
  "packages/account/src/__tests__/RegisterForm.test.tsx",
  "packages/account/src/__tests__/SignInForm.test.tsx",
  "packages/account/src/__tests__/in-memory-account-service.test.ts",
  "packages/account/src/__tests__/test-utils.tsx",
  "packages/account/src/components/AccountOverview.tsx",
  "packages/account/src/components/ChangePasswordForm.tsx",
  "packages/account/src/components/EditProfileForm.tsx",
  "packages/account/src/components/PasswordResetForm.tsx",
  "packages/account/src/components/RegisterForm.tsx",
  "packages/account/src/components/SignInForm.tsx",
  "packages/account/src/components/index.ts",
  "packages/account/src/hooks/useAccount.ts",
  "packages/account/src/index.ts",
  "packages/account/src/providers/AccountProvider.tsx",
  "packages/account/src/services/in-memory-account-service.ts",
  "packages/account/src/types.ts",
  "packages/account/src/utils/errors.ts",
  "packages/account/src/utils/index.ts",
  "packages/account/src/utils/logger.ts",
  "packages/account/src/utils/person-name.ts",
  "packages/account/src/utils/validation.ts",
  "packages/account/tsconfig.json",
  "packages/chat/README.md",
  "packages/chat/babel.config.js",
  "packages/chat/jest.setup.js",
  "packages/chat/package.json",
  "packages/chat/src/__tests__/MessageBubble.test.tsx",
  "packages/chat/src/__tests__/MessageInput.test.tsx",
  "packages/chat/src/__tests__/test-utils.tsx",
  "packages/chat/src/__tests__/theme.test.ts",
  "packages/chat/src/components/ChatView.tsx",
  "packages/chat/src/components/MessageBubble.tsx",
  "packages/chat/src/components/MessageInput.tsx",
  "packages/chat/src/components/index.ts",
  "packages/chat/src/index.ts",
  "packages/chat/src/services/index.ts",
  "packages/chat/src/services/llm.ts",
  "packages/chat/src/theme/default-theme.ts",
  "packages/chat/src/theme/index.ts",
  "packages/chat/src/types.ts",
  "packages/chat/tsconfig.json",
  "packages/firebase/.firebaserc",
  "packages/firebase/.gitignore",
  "packages/firebase/README.md",
  "packages/firebase/babel.config.js",
  "packages/firebase/firebase.json",
  "packages/firebase/firestore.rules",
  "packages/firebase/jest.integration.config.js",
  "packages/firebase/jest.integration.setup.js",
  "packages/firebase/jest.setup.js",
  "packages/firebase/package.json",
  "packages/firebase/src/__mocks__/fileMock.js",
  "packages/firebase/src/__tests__/errors.test.ts",
  "packages/firebase/src/__tests__/firebase-account-service.test.ts",
  "packages/firebase/src/__tests__/integration/firebase-account-service.integration.test.ts",
  "packages/firebase/src/__tests__/setup.ts",
  "packages/firebase/src/index.ts",
  "packages/firebase/src/services/firebase-account-service.ts",
  "packages/firebase/src/utils/errors.ts",
  "packages/firebase/tsconfig.json",
  "packages/onboarding/README.md",
  "packages/onboarding/babel.config.js",
  "packages/onboarding/jest.setup.js",
  "packages/onboarding/package.json",
  "packages/onboarding/src/__tests__/ConsentService.test.ts",
  "packages/onboarding/src/__tests__/components.test.tsx",
  "packages/onboarding/src/__tests__/useOnboardingStatus.test.ts",
  "packages/onboarding/src/components/ConsentCheckbox.tsx",
  "packages/onboarding/src/components/FeatureCard.tsx",
  "packages/onboarding/src/components/NameInputSection.tsx",
  "packages/onboarding/src/components/OnboardingButton.tsx",
  "packages/onboarding/src/components/PaginationDots.tsx",
  "packages/onboarding/src/components/index.ts",
  "packages/onboarding/src/constants.ts",
  "packages/onboarding/src/hooks/index.ts",
  "packages/onboarding/src/hooks/useOnboardingStatus.ts",
  "packages/onboarding/src/index.ts",
  "packages/onboarding/src/services/ConsentService.ts",
  "packages/onboarding/src/services/index.ts",
  "packages/onboarding/src/types.ts",
  "packages/onboarding/tsconfig.json",
  "packages/questionnaire/EXAMPLES.md",
  "packages/questionnaire/README.md",
  "packages/questionnaire/babel.config.js",
  "packages/questionnaire/jest.setup.js",
  "packages/questionnaire/package.json",
  "packages/questionnaire/src/__mocks__/fileMock.js",
  "packages/questionnaire/src/__tests__/components/BooleanQuestion.test.tsx",
  "packages/questionnaire/src/__tests__/components/ChoiceQuestion.test.tsx",
  "packages/questionnaire/src/__tests__/components/IntegerQuestion.test.tsx",
  "packages/questionnaire/src/__tests__/components/QuestionnaireForm.test.tsx",
  "packages/questionnaire/src/__tests__/components/TextQuestion.test.tsx",
  "packages/questionnaire/src/__tests__/theme/default-theme.test.ts",
  "packages/questionnaire/src/__tests__/types.test.ts",
  "packages/questionnaire/src/__tests__/validation/schema-builder.test.ts",
  "packages/questionnaire/src/builders/QuestionnaireBuilder.ts",
  "packages/questionnaire/src/components/ErrorBoundary.tsx",
  "packages/questionnaire/src/components/QuestionRenderer.tsx",
  "packages/questionnaire/src/components/QuestionnaireForm.tsx",
  "packages/questionnaire/src/components/index.ts",
  "packages/questionnaire/src/components/questions/BooleanQuestion.tsx",
  "packages/questionnaire/src/components/questions/ChoiceQuestion.tsx",
  "packages/questionnaire/src/components/questions/DateQuestion.tsx",
  "packages/questionnaire/src/components/questions/DateTimeQuestion.tsx",
  "packages/questionnaire/src/components/questions/DecimalQuestion.tsx",
  "packages/questionnaire/src/components/questions/DisplayQuestion.tsx",
  "packages/questionnaire/src/components/questions/GroupQuestion.tsx",
  "packages/questionnaire/src/components/questions/IntegerQuestion.tsx",
  "packages/questionnaire/src/components/questions/TextQuestion.tsx",
  "packages/questionnaire/src/components/questions/TimeQuestion.tsx",
  "packages/questionnaire/src/components/questions/index.ts",
  "packages/questionnaire/src/enablewhen/EnableWhenEvaluator.ts",
  "packages/questionnaire/src/index.ts",
  "packages/questionnaire/src/theme/default-theme.ts",
  "packages/questionnaire/src/types/index.ts",
  "packages/questionnaire/src/utils/haptics.ts",
  "packages/questionnaire/src/validation/schema-builder.ts",
  "packages/questionnaire/tsconfig.json",
  "packages/scheduler/.gitignore",
  "packages/scheduler/.npmignore",
  "packages/scheduler/README.md",
  "packages/scheduler/__tests__/Scheduler.test.ts",
  "packages/scheduler/__tests__/utils.test.ts",
  "packages/scheduler/babel.config.js",
  "packages/scheduler/jest.setup.js",
  "packages/scheduler/package.json",
  "packages/scheduler/src/hooks/index.ts",
  "packages/scheduler/src/hooks/useScheduleScreen.ts",
  "packages/scheduler/src/hooks/useScheduler.ts",
  "packages/scheduler/src/index.ts",
  "packages/scheduler/src/providers/SchedulerProvider.tsx",
  "packages/scheduler/src/providers/index.ts",
  "packages/scheduler/src/sample-tasks.ts",
  "packages/scheduler/src/services/Scheduler.ts",
  "packages/scheduler/src/services/index.ts",
  "packages/scheduler/src/types.ts",
  "packages/scheduler/src/ui/components/CalendarStrip.tsx",
  "packages/scheduler/src/ui/components/CompletionBadge.tsx",
  "packages/scheduler/src/ui/components/EventCard.tsx",
  "packages/scheduler/src/ui/components/EventList.tsx",
  "packages/scheduler/src/ui/components/ScheduleView.tsx",
  "packages/scheduler/src/ui/components/index.ts",
  "packages/scheduler/src/ui/index.ts",
  "packages/scheduler/src/ui/theme.ts",
  "packages/scheduler/src/utils/calculations.ts",
  "packages/scheduler/src/utils/formatting.ts",
  "packages/scheduler/src/utils/index.ts",
  "packages/scheduler/tsconfig.json",
  "tsconfig.json",
]
`;

exports[`Generator Snapshots Full Configuration (Firebase + All Features) should match package.json snapshot: package.json 1`] = `
"{
  "name": "full-app",
  "main": "expo-router/entry",
  "version": "1.0.0",
  "scripts": {
    "start": "expo start",
    "android": "expo start --android",
    "ios": "expo start --ios",
    "web": "expo start --web",
    "lint": "expo lint",
    "typecheck": "tsc --noEmit",
    "build": "npm run build --workspaces --if-present",
    "test": "npm run test --workspaces --if-present",
    "emulators": "firebase emulators:start",
    "emulators:export": "firebase emulators:export ./firebase-data",
    "emulators:import": "firebase emulators:start --import=./firebase-data"
  },
  "dependencies": {
    "@ai-sdk/anthropic": "^3.0.1",
    "@ai-sdk/google": "^3.0.1",
    "@ai-sdk/openai": "^3.0.1",
    "@blazejkustra/react-native-alert": "^1.0.0",
    "@expo/vector-icons": "^15.0.3",
    "@react-native-async-storage/async-storage": "^2.2.0",
    "@react-navigation/bottom-tabs": "^7.9.0",
    "@react-navigation/elements": "^2.9.3",
    "@react-navigation/native": "^7.1.26",
    "@spezivibe/account": "*",
    "@spezivibe/chat": "*",
    "@spezivibe/firebase": "*",
    "@spezivibe/onboarding": "*",
    "@spezivibe/questionnaire": "*",
    "@spezivibe/scheduler": "*",
    "ai": "^6.0.3",
    "expo": "~54.0.30",
    "expo-constants": "~18.0.12",
    "expo-font": "~14.0.10",
    "expo-haptics": "~15.0.8",
    "expo-image": "~3.0.11",
    "expo-linking": "~8.0.11",
    "expo-router": "~6.0.21",
    "expo-splash-screen": "~31.0.13",
    "expo-status-bar": "~3.0.9",
    "expo-symbols": "~1.0.8",
    "expo-system-ui": "~6.0.9",
    "expo-web-browser": "~15.0.10",
    "firebase": "^12.7.0",
    "formik": "^2.4.9",
    "react": "19.1.0",
    "react-dom": "19.1.0",
    "react-native": "0.81.5",
    "react-native-gesture-handler": "~2.28.0",
    "react-native-reanimated": "~4.1.6",
    "react-native-safe-area-context": "~5.6.0",
    "react-native-screens": "~4.16.0",
    "react-native-web": "~0.21.0",
    "react-native-worklets": "0.5.1",
    "yup": "^1.7.1"
  },
  "devDependencies": {
    "@types/react": "~19.1.17",
    "eslint": "^9.39.0",
    "eslint-config-expo": "~10.0.0",
    "typescript": "~5.9.2"
  },
  "private": true,
  "workspaces": [
    "packages/*"
  ]
}"
`;

exports[`Generator Snapshots Full Configuration (Firebase + All Features) should match tabs layout snapshot: tabs/_layout.tsx 1`] = `
"import { Tabs } from 'expo-router';
import React from 'react';

import { HapticTab } from '@/components/haptic-tab';
import { IconSymbol } from '@/components/ui/icon-symbol';
import { Colors } from '@/constants/theme';
import { useColorScheme } from '@/hooks/use-color-scheme';

export default function TabLayout() {
  const colorScheme = useColorScheme();

  return (
    <Tabs
      screenOptions={{
        tabBarActiveTintColor: Colors[colorScheme ?? 'light'].tint,
        headerShown: false,
        tabBarButton: HapticTab,
      }}>
      <Tabs.Screen
        name="index"
        options={{
          title: 'Home',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="house.fill" color={color} />,
        }}
      />
      <Tabs.Screen
        name="explore"
        options={{
          title: 'Explore',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="paperplane.fill" color={color} />,
        }}
      />
      <Tabs.Screen
        name="contacts"
        options={{
          title: 'Contacts',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="person.2.fill" color={color} />,
        }}
      />
      <Tabs.Screen
        name="chat"
        options={{
          title: 'Chat',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="message.fill" color={color} />,
        }}
      />
      <Tabs.Screen
        name="schedule"
        options={{
          title: 'Schedule',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="calendar" color={color} />,
        }}
      />
    </Tabs>
  );
}"
`;

exports[`Generator Snapshots HealthKit (Local) should match app.config.js snapshot: app.config.js 1`] = `
"module.exports = {
  expo: {
    name: "HealthKit App",
    slug: "healthkit-app",
    version: "1.0.0",
    orientation: "portrait",
    icon: "./assets/images/icon.png",
    scheme: "healthkit-app",
    userInterfaceStyle: "automatic",
    newArchEnabled: true,
    ios: {
      supportsTablet: true
    },
    android: {
      adaptiveIcon: {
        backgroundColor: "#E6F4FE",
        foregroundImage: "./assets/images/android-icon-foreground.png",
        backgroundImage: "./assets/images/android-icon-background.png",
        monochromeImage: "./assets/images/android-icon-monochrome.png"
      },
      edgeToEdgeEnabled: true,
      predictiveBackGestureEnabled: false
    },
    web: {
      output: "static",
      favicon: "./assets/images/favicon.png"
    },
    plugins: [
      "expo-router",
      [
        "expo-splash-screen",
        {
          image: "./assets/images/splash-icon.png",
          imageWidth: 200,
          resizeMode: "contain",
          backgroundColor: "#ffffff",
          dark: {
            backgroundColor: "#000000"
          }
        }
      ],
      [
        "@kingstinct/react-native-healthkit",
        {
          "NSHealthShareUsageDescription": "This app needs access to your health data to display your health metrics and track your progress.",
          "NSHealthUpdateUsageDescription": "This app needs permission to save health data to track your activities."
        }
      ]
    ],
    experiments: {
      typedRoutes: true,
      reactCompiler: true
    },
  }
};"
`;

exports[`Generator Snapshots HealthKit (Local) should match package.json snapshot: package.json 1`] = `
"{
  "name": "healthkit-app",
  "main": "expo-router/entry",
  "version": "1.0.0",
  "scripts": {
    "start": "expo start",
    "android": "expo start --android",
    "ios": "expo start --ios",
    "web": "expo start --web",
    "lint": "expo lint",
    "typecheck": "tsc --noEmit",
    "build": "npm run build --workspaces --if-present",
    "test": "npm run test --workspaces --if-present"
  },
  "dependencies": {
    "@blazejkustra/react-native-alert": "^1.0.0",
    "@expo/vector-icons": "^15.0.3",
    "@kingstinct/react-native-healthkit": "^9.0.0",
    "@react-native-async-storage/async-storage": "^2.2.0",
    "@react-navigation/bottom-tabs": "^7.9.0",
    "@react-navigation/elements": "^2.9.3",
    "@react-navigation/native": "^7.1.26",
    "@spezivibe/healthkit": "*",
    "expo": "~54.0.30",
    "expo-constants": "~18.0.12",
    "expo-font": "~14.0.10",
    "expo-haptics": "~15.0.8",
    "expo-image": "~3.0.11",
    "expo-linking": "~8.0.11",
    "expo-router": "~6.0.21",
    "expo-splash-screen": "~31.0.13",
    "expo-status-bar": "~3.0.9",
    "expo-symbols": "~1.0.8",
    "expo-system-ui": "~6.0.9",
    "expo-web-browser": "~15.0.10",
    "formik": "^2.4.9",
    "react": "19.1.0",
    "react-dom": "19.1.0",
    "react-native": "0.81.5",
    "react-native-gesture-handler": "~2.28.0",
    "react-native-nitro-modules": "^0.24.0",
    "react-native-reanimated": "~4.1.6",
    "react-native-safe-area-context": "~5.6.0",
    "react-native-screens": "~4.16.0",
    "react-native-web": "~0.21.0",
    "react-native-worklets": "0.5.1",
    "yup": "^1.7.1"
  },
  "devDependencies": {
    "@types/react": "~19.1.17",
    "eslint": "^9.39.0",
    "eslint-config-expo": "~10.0.0",
    "typescript": "~5.9.2"
  },
  "private": true,
  "workspaces": [
    "packages/*"
  ]
}"
`;

exports[`Generator Snapshots HealthKit (Local) should match tabs layout snapshot: tabs/_layout.tsx 1`] = `
"import { Tabs } from 'expo-router';
import React from 'react';

import { HapticTab } from '@/components/haptic-tab';
import { IconSymbol } from '@/components/ui/icon-symbol';
import { Colors } from '@/constants/theme';
import { useColorScheme } from '@/hooks/use-color-scheme';

export default function TabLayout() {
  const colorScheme = useColorScheme();

  return (
    <Tabs
      screenOptions={{
        tabBarActiveTintColor: Colors[colorScheme ?? 'light'].tint,
        headerShown: false,
        tabBarButton: HapticTab,
      }}>
      <Tabs.Screen
        name="index"
        options={{
          title: 'Home',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="house.fill" color={color} />,
        }}
      />
      <Tabs.Screen
        name="explore"
        options={{
          title: 'Explore',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="paperplane.fill" color={color} />,
        }}
      />
      <Tabs.Screen
        name="contacts"
        options={{
          title: 'Contacts',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="person.2.fill" color={color} />,
        }}
      />
      <Tabs.Screen
        name="health"
        options={{
          title: 'Health',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="heart.fill" color={color} />,
        }}
      />
    </Tabs>
  );
}"
`;

exports[`Generator Snapshots Local + HIPAA should match file structure snapshot: files 1`] = `
[
  ".claude/commands/README.md",
  ".claude/commands/changelog.md",
  ".claude/commands/compliance.md",
  ".claude/commands/data-model.md",
  ".claude/commands/docs.md",
  ".claude/commands/feature.md",
  ".claude/commands/fhir-mapping.md",
  ".claude/commands/fhir.md",
  ".claude/commands/release.md",
  ".claude/commands/study-planner.md",
  ".claude/commands/test.md",
  ".claude/commands/ux-planner.md",
  ".env",
  ".env.example",
  ".gitignore",
  "AGENTS.md",
  "CLAUDE.md",
  "GETTING_STARTED.md",
  "HIPAA_CHECKLIST.md",
  "app.config.js",
  "app/(tabs)/_layout.tsx",
  "app/(tabs)/contacts.tsx",
  "app/(tabs)/explore.tsx",
  "app/(tabs)/index.tsx",
  "app/_layout.tsx",
  "app/modal.tsx",
  "assets/images/android-icon-background.png",
  "assets/images/android-icon-foreground.png",
  "assets/images/android-icon-monochrome.png",
  "assets/images/favicon.png",
  "assets/images/icon.png",
  "assets/images/partial-react-logo.png",
  "assets/images/react-logo.png",
  "assets/images/react-logo@2x.png",
  "assets/images/react-logo@3x.png",
  "assets/images/rocket-logo.png",
  "assets/images/spezivibe-logo.png",
  "assets/images/splash-icon.png",
  "assets/styles/global.css",
  "components/error-boundary.tsx",
  "components/external-link.tsx",
  "components/haptic-tab.tsx",
  "components/hello-wave.tsx",
  "components/parallax-scroll-view.tsx",
  "components/themed-text.tsx",
  "components/themed-view.tsx",
  "components/ui/collapsible.tsx",
  "components/ui/icon-symbol.ios.tsx",
  "components/ui/icon-symbol.tsx",
  "components/ui/loading-screen.tsx",
  "components/ui/screen.tsx",
  "constants/theme.ts",
  "eslint.config.js",
  "hooks/use-color-scheme.ts",
  "hooks/use-color-scheme.web.ts",
  "hooks/use-onboarding-status.ts",
  "hooks/use-theme-color.ts",
  "lib/constants.ts",
  "lib/services/README.md",
  "lib/services/backend-factory.ts",
  "lib/services/backends/local-storage.ts",
  "lib/services/config.ts",
  "lib/services/index.ts",
  "lib/services/standard-context.tsx",
  "lib/services/types.ts",
  "lib/utils/logger.ts",
  "metro.config.js",
  "package.json",
  "packages/audit/package.json",
  "packages/audit/src/audit-service.ts",
  "packages/audit/src/backends/firebase.ts",
  "packages/audit/src/backends/local.ts",
  "packages/audit/src/backends/medplum.ts",
  "packages/audit/src/backends/supabase.ts",
  "packages/audit/src/index.ts",
  "packages/audit/src/sanitize.ts",
  "packages/audit/src/secure-storage.ts",
  "packages/audit/src/session-monitor.tsx",
  "packages/audit/src/types.ts",
  "packages/audit/tsconfig.json",
  "tsconfig.json",
]
`;

exports[`Generator Snapshots Local + HIPAA should match package.json snapshot: package.json 1`] = `
"{
  "name": "hipaa-local-app",
  "main": "expo-router/entry",
  "version": "1.0.0",
  "scripts": {
    "start": "expo start",
    "android": "expo start --android",
    "ios": "expo start --ios",
    "web": "expo start --web",
    "lint": "expo lint",
    "typecheck": "tsc --noEmit",
    "build": "npm run build --workspaces --if-present",
    "test": "npm run test --workspaces --if-present"
  },
  "dependencies": {
    "@blazejkustra/react-native-alert": "^1.0.0",
    "@expo/vector-icons": "^15.0.3",
    "@react-native-async-storage/async-storage": "^2.2.0",
    "@react-navigation/bottom-tabs": "^7.9.0",
    "@react-navigation/elements": "^2.9.3",
    "@react-navigation/native": "^7.1.26",
    "@spezivibe/audit": "*",
    "expo": "~54.0.30",
    "expo-constants": "~18.0.12",
    "expo-font": "~14.0.10",
    "expo-haptics": "~15.0.8",
    "expo-image": "~3.0.11",
    "expo-linking": "~8.0.11",
    "expo-router": "~6.0.21",
    "expo-splash-screen": "~31.0.13",
    "expo-status-bar": "~3.0.9",
    "expo-symbols": "~1.0.8",
    "expo-system-ui": "~6.0.9",
    "expo-web-browser": "~15.0.10",
    "formik": "^2.4.9",
    "react": "19.1.0",
    "react-dom": "19.1.0",
    "react-native": "0.81.5",
    "react-native-gesture-handler": "~2.28.0",
    "react-native-reanimated": "~4.1.6",
    "react-native-safe-area-context": "~5.6.0",
    "react-native-screens": "~4.16.0",
    "react-native-web": "~0.21.0",
    "react-native-worklets": "0.5.1",
    "yup": "^1.7.1"
  },
  "devDependencies": {
    "@types/react": "~19.1.17",
    "eslint": "^9.39.0",
    "eslint-config-expo": "~10.0.0",
    "typescript": "~5.9.2"
  },
  "private": true,
  "workspaces": [
    "packages/*"
  ]
}"
`;

exports[`Generator Snapshots Minimal Configuration should match .env.example snapshot: .env.example 1`] = `
"# Backend Configuration
EXPO_PUBLIC_BACKEND_TYPE=local"
`;

exports[`Generator Snapshots Minimal Configuration should match app/_layout.tsx snapshot: app/_layout.tsx 1`] = `
"import React from 'react';
import { DarkTheme, DefaultTheme, ThemeProvider } from '@react-navigation/native';
import { Stack } from 'expo-router';
import { StatusBar } from 'expo-status-bar';
import 'react-native-reanimated';
// Global CSS for web (theming for alert dialogs, etc.) - only processed on web
import '@/assets/styles/global.css';

import { useColorScheme } from '@/hooks/use-color-scheme';
import { LoadingScreen } from '@/components/ui/loading-screen';
import { ErrorBoundary } from '@/components/error-boundary';
import { StandardProvider, useStandard } from '@/lib/services/standard-context';

export const unstable_settings = {
  anchor: '(tabs)',
};

function RootLayoutNav() {
  return (
    <Stack screenOptions={{ headerShown: false }}>
      <Stack.Screen name="(tabs)" />
      {/* __INJECT_STACK_SCREENS__ */}
      <Stack.Screen name="modal" options={{ presentation: 'modal', title: 'Modal', headerShown: true }} />
    </Stack>
  );
}

function AppContent({ children }: { children: React.ReactNode }) {
  const { isLoading } = useStandard();

  if (isLoading) {
    return <LoadingScreen />;
  }

  return <>{children}</>;
}

/**
 * Root Layout - Local Mode
 *
 * This is the simplified layout for local storage mode.
 * No authentication is required - the app launches directly.
 *
 * For cloud authentication with Firebase, select the Firebase backend
 * when generating your app:
 *   npx create-spezivibe-app my-app
 *   # Select "Firebase" when prompted for backend
 */
export default function RootLayout() {
  const colorScheme = useColorScheme();

  return (
    <ErrorBoundary>
      <ThemeProvider value={colorScheme === 'dark' ? DarkTheme : DefaultTheme}>
        <StandardProvider>
          <AppContent>
            <RootLayoutNav />
            <StatusBar style="auto" />
          </AppContent>
        </StandardProvider>
      </ThemeProvider>
    </ErrorBoundary>
  );
}"
`;

exports[`Generator Snapshots Minimal Configuration should match file structure snapshot: files 1`] = `
[
  ".claude/commands/README.md",
  ".claude/commands/changelog.md",
  ".claude/commands/compliance.md",
  ".claude/commands/data-model.md",
  ".claude/commands/docs.md",
  ".claude/commands/feature.md",
  ".claude/commands/fhir-mapping.md",
  ".claude/commands/fhir.md",
  ".claude/commands/release.md",
  ".claude/commands/study-planner.md",
  ".claude/commands/test.md",
  ".claude/commands/ux-planner.md",
  ".env",
  ".env.example",
  ".gitignore",
  "AGENTS.md",
  "CLAUDE.md",
  "GETTING_STARTED.md",
  "app.config.js",
  "app/(tabs)/_layout.tsx",
  "app/(tabs)/contacts.tsx",
  "app/(tabs)/explore.tsx",
  "app/(tabs)/index.tsx",
  "app/_layout.tsx",
  "app/modal.tsx",
  "assets/images/android-icon-background.png",
  "assets/images/android-icon-foreground.png",
  "assets/images/android-icon-monochrome.png",
  "assets/images/favicon.png",
  "assets/images/icon.png",
  "assets/images/partial-react-logo.png",
  "assets/images/react-logo.png",
  "assets/images/react-logo@2x.png",
  "assets/images/react-logo@3x.png",
  "assets/images/rocket-logo.png",
  "assets/images/spezivibe-logo.png",
  "assets/images/splash-icon.png",
  "assets/styles/global.css",
  "components/error-boundary.tsx",
  "components/external-link.tsx",
  "components/haptic-tab.tsx",
  "components/hello-wave.tsx",
  "components/parallax-scroll-view.tsx",
  "components/themed-text.tsx",
  "components/themed-view.tsx",
  "components/ui/collapsible.tsx",
  "components/ui/icon-symbol.ios.tsx",
  "components/ui/icon-symbol.tsx",
  "components/ui/loading-screen.tsx",
  "components/ui/screen.tsx",
  "constants/theme.ts",
  "eslint.config.js",
  "hooks/use-color-scheme.ts",
  "hooks/use-color-scheme.web.ts",
  "hooks/use-onboarding-status.ts",
  "hooks/use-theme-color.ts",
  "lib/constants.ts",
  "lib/services/README.md",
  "lib/services/backend-factory.ts",
  "lib/services/backends/local-storage.ts",
  "lib/services/config.ts",
  "lib/services/index.ts",
  "lib/services/standard-context.tsx",
  "lib/services/types.ts",
  "lib/utils/logger.ts",
  "metro.config.js",
  "package.json",
  "tsconfig.json",
]
`;

exports[`Generator Snapshots Minimal Configuration should match package.json snapshot: package.json 1`] = `
"{
  "name": "minimal-app",
  "main": "expo-router/entry",
  "version": "1.0.0",
  "scripts": {
    "start": "expo start",
    "android": "expo start --android",
    "ios": "expo start --ios",
    "web": "expo start --web",
    "lint": "expo lint",
    "typecheck": "tsc --noEmit",
    "build": "npm run build --workspaces --if-present",
    "test": "npm run test --workspaces --if-present"
  },
  "dependencies": {
    "@blazejkustra/react-native-alert": "^1.0.0",
    "@expo/vector-icons": "^15.0.3",
    "@react-native-async-storage/async-storage": "^2.2.0",
    "@react-navigation/bottom-tabs": "^7.9.0",
    "@react-navigation/elements": "^2.9.3",
    "@react-navigation/native": "^7.1.26",
    "expo": "~54.0.30",
    "expo-constants": "~18.0.12",
    "expo-font": "~14.0.10",
    "expo-haptics": "~15.0.8",
    "expo-image": "~3.0.11",
    "expo-linking": "~8.0.11",
    "expo-router": "~6.0.21",
    "expo-splash-screen": "~31.0.13",
    "expo-status-bar": "~3.0.9",
    "expo-symbols": "~1.0.8",
    "expo-system-ui": "~6.0.9",
    "expo-web-browser": "~15.0.10",
    "formik": "^2.4.9",
    "react": "19.1.0",
    "react-dom": "19.1.0",
    "react-native": "0.81.5",
    "react-native-gesture-handler": "~2.28.0",
    "react-native-reanimated": "~4.1.6",
    "react-native-safe-area-context": "~5.6.0",
    "react-native-screens": "~4.16.0",
    "react-native-web": "~0.21.0",
    "react-native-worklets": "0.5.1",
    "yup": "^1.7.1"
  },
  "devDependencies": {
    "@types/react": "~19.1.17",
    "eslint": "^9.39.0",
    "eslint-config-expo": "~10.0.0",
    "typescript": "~5.9.2"
  },
  "private": true,
  "workspaces": [
    "packages/*"
  ]
}"
`;

exports[`Generator Snapshots Minimal Configuration should match tabs layout snapshot: tabs/_layout.tsx 1`] = `
"import { Tabs } from 'expo-router';
import React from 'react';

import { HapticTab } from '@/components/haptic-tab';
import { IconSymbol } from '@/components/ui/icon-symbol';
import { Colors } from '@/constants/theme';
import { useColorScheme } from '@/hooks/use-color-scheme';

export default function TabLayout() {
  const colorScheme = useColorScheme();

  return (
    <Tabs
      screenOptions={{
        tabBarActiveTintColor: Colors[colorScheme ?? 'light'].tint,
        headerShown: false,
        tabBarButton: HapticTab,
      }}>
      <Tabs.Screen
        name="index"
        options={{
          title: 'Home',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="house.fill" color={color} />,
        }}
      />
      <Tabs.Screen
        name="explore"
        options={{
          title: 'Explore',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="paperplane.fill" color={color} />,
        }}
      />
      <Tabs.Screen
        name="contacts"
        options={{
          title: 'Contacts',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="person.2.fill" color={color} />,
        }}
      />
      {/* __INJECT_TABS__ */}
    </Tabs>
  );
}"
`;

exports[`Generator Snapshots Scheduler + Questionnaire (Firebase) should match tabs layout snapshot: tabs/_layout.tsx 1`] = `
"import { Tabs } from 'expo-router';
import React from 'react';

import { HapticTab } from '@/components/haptic-tab';
import { IconSymbol } from '@/components/ui/icon-symbol';
import { Colors } from '@/constants/theme';
import { useColorScheme } from '@/hooks/use-color-scheme';

export default function TabLayout() {
  const colorScheme = useColorScheme();

  return (
    <Tabs
      screenOptions={{
        tabBarActiveTintColor: Colors[colorScheme ?? 'light'].tint,
        headerShown: false,
        tabBarButton: HapticTab,
      }}>
      <Tabs.Screen
        name="index"
        options={{
          title: 'Home',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="house.fill" color={color} />,
        }}
      />
      <Tabs.Screen
        name="explore"
        options={{
          title: 'Explore',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="paperplane.fill" color={color} />,
        }}
      />
      <Tabs.Screen
        name="contacts"
        options={{
          title: 'Contacts',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="person.2.fill" color={color} />,
        }}
      />
      <Tabs.Screen
        name="schedule"
        options={{
          title: 'Schedule',
          tabBarIcon: ({ color }) => <IconSymbol size={28} name="calendar" color={color} />,
        }}
      />
    </Tabs>
  );
}"
`;
